--- a/csd/general-recurrence/sections/02-norm-refs.adoc
+++ b/csd/general-recurrence/sections/02-norm-refs.adoc
@@ -2,6 +2,6 @@
 [bibliography]
 == Normative References
 
-* [[[ISO8601,ISO 8601:2004]]], _Date and time -- Representation for information interchange_
-
 * [[[CC18011,CC 18011:--]]] footnote:[Under preparation. (Stage at the time of publication CC/DS 18011)], _Date and time -- Explicit representation_
+
+* [[[ISO8601-1,ISO 8601-1:--]]] footnote:[Under preparation. (Stage at the time of publication ISO/FDIS 8601-1)], _Date and time -- Representation for information interchange -- Part 1: Basic rules_
