--- a/csd/general-recurrence/sections/zz-references.adoc
+++ b/csd/general-recurrence/sections/zz-references.adoc
@@ -4,7 +4,7 @@
 
 * [[[ISOIEC646,ISO/IEC 646]]], _Information technology -- ISO 7-bit coded character set for information interchange_
 
-* [[[ISO8601-1,ISO 8601-1:--]]] footnote:[Under preparation. (Stage at the time of publication ISO/FDIS 8601-1)], _Date and time -- Representation for information interchange -- Part 1: Basic rules_
+* [[[ISO8601,ISO 8601:2004]]], _Data elements and interchange formats -- Information interchange -- Representation of dates and times_
 
 * [[[RFC5545,IETF RFC 5545]]], _AUTOFILL_
 
